@@ -243,7 +243,8 @@ AC_ARG_ENABLE(async_io,
     echo "Async I/O enabled"
     AC_DEFINE(USE_ASYNC_IO)
     ASYNC_OBJS='$(ASYNC_OBJS)'
-    SQUID_PTHREAD_LIB='$(PTHREAD_LIB)'
+    SQUID_PTHREAD_LIB='$(PTHREADLIB)'
+    CFLAGS="$CFLAGS -D_REENTRANT"
   fi
 ])
 AC_SUBST(ASYNC_OBJS)
@@ -273,8 +274,9 @@ AC_ARG_ENABLE(useragent_log,
   fi
 ])
 
-AC_ARG_ENABLE(kill_parent,
-[  --enable-kill-parent    Kill parent on shutdown],
+AC_ARG_ENABLE(kill_parent_hack,
+[  --enable-kill-parent-hack
+                          Kill parent on shutdown],
 [ if test "$enableval" = "yes" ; then
     echo "Kill parent on shutdown"
     AC_DEFINE(KILL_PARENT_OPT)
